--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /.vs/grapevineApiCode/FileContentIndex/merges
+/.vs/grapevineApiCode/FileContentIndex
