Add gitignore for build folders

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 /.vs/grapevineApiCode/FileContentIndex/merges
 /.vs/grapevineApiCode/FileContentIndex
 /.vs/grapevineApiCode/v17
+
+# .NET build output
+bin/
+obj/
+publish/
+
+# Visual Studio
+.vs/
+*.user
+*.suo
