--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,36 @@
 /.vs/grapevineApiCode/FileContentIndex/merges
 /.vs/grapevineApiCode/FileContentIndex
 /.vs/grapevineApiCode/v17
+
+# .NET build output
+bin/
+obj/
+publish/
+
+# Visual Studio
+.vs/
+*.user
+*.suo
+/grapevineApi/obj/Debug/net8.0/grapevineApi.AssemblyInfo.cs
+/grapevineApi/obj/Debug/net8.0/grapevineApi.AssemblyInfoInputs.cache
+/grapevineApi/obj/Debug/net8.0/grapevineApi.assets.cache
+/grapevineApi/obj/Debug/net8.0/grapevineApi.csproj.AssemblyReference.cache
+/grapevineApi/obj/Debug/net8.0/grapevineApi.GeneratedMSBuildEditorConfig.editorconfig
+/grapevineCommon/obj/Debug/net8.0/grapevineCommon.AssemblyInfo.cs
+/grapevineCommon/obj/Debug/net8.0/grapevineCommon.AssemblyInfoInputs.cache
+/grapevineCommon/obj/Debug/net8.0/grapevineCommon.assets.cache
+/grapevineCommon/obj/Debug/net8.0/grapevineCommon.GeneratedMSBuildEditorConfig.editorconfig
+/grapevineData/obj/Debug/net8.0/grapevineData.AssemblyInfo.cs
+/grapevineData/obj/Debug/net8.0/grapevineData.AssemblyInfoInputs.cache
+/grapevineData/obj/Debug/net8.0/grapevineData.assets.cache
+/grapevineData/obj/Debug/net8.0/grapevineData.GeneratedMSBuildEditorConfig.editorconfig
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.AssemblyInfo.cs
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.AssemblyInfoInputs.cache
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.assets.cache
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.csproj.AssemblyReference.cache
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.GeneratedMSBuildEditorConfig.editorconfig
+/grapevineServices/obj/Debug/net8.0/grapevineServices.AssemblyInfo.cs
+/grapevineServices/obj/Debug/net8.0/grapevineServices.AssemblyInfoInputs.cache
+/grapevineServices/obj/Debug/net8.0/grapevineServices.assets.cache
+/grapevineServices/obj/Debug/net8.0/grapevineServices.csproj.AssemblyReference.cache
+/grapevineServices/obj/Debug/net8.0/grapevineServices.GeneratedMSBuildEditorConfig.editorconfig
