--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,55 @@ publish/
 /grapevineServices/obj/Debug/net8.0/grapevineServices.assets.cache
 /grapevineServices/obj/Debug/net8.0/grapevineServices.csproj.AssemblyReference.cache
 /grapevineServices/obj/Debug/net8.0/grapevineServices.GeneratedMSBuildEditorConfig.editorconfig
+/grapevineApi/bin/Debug/net8.0/grapevineApi.deps.json
+/grapevineApi/bin/Debug/net8.0/grapevineApi.dll
+/grapevineApi/bin/Debug/net8.0/grapevineApi.exe
+/grapevineApi/bin/Debug/net8.0/grapevineApi.pdb
+/grapevineApi/bin/Debug/net8.0/grapevineRepository.dll
+/grapevineApi/bin/Debug/net8.0/grapevineRepository.pdb
+/grapevineApi/bin/Debug/net8.0/grapevineServices.dll
+/grapevineApi/bin/Debug/net8.0/grapevineServices.pdb
+/grapevineApi/obj/Debug/net8.0/ref/grapevineApi.dll
+/grapevineApi/obj/Debug/net8.0/refint/grapevineApi.dll
+/grapevineApi/obj/Debug/net8.0/apphost.exe
+/grapevineApi/obj/Debug/net8.0/grapevineApi.csproj.CoreCompileInputs.cache
+/grapevineApi/obj/Debug/net8.0/grapevineApi.csproj.FileListAbsolute.txt
+/grapevineApi/obj/Debug/net8.0/grapevineApi.dll
+/grapevineApi/obj/Debug/net8.0/grapevineApi.genruntimeconfig.cache
+/grapevineApi/obj/Debug/net8.0/grapevineApi.pdb
+/grapevineApi/obj/Debug/net8.0/grapevineApi.sourcelink.json
+/grapevineApi/obj/grapevineApi.csproj.nuget.dgspec.json
+/grapevineApi/obj/project.assets.json
+/grapevineApi/obj/project.nuget.cache
+/grapevineServices/bin/Debug/net8.0/grapevineRepository.dll
+/grapevineServices/bin/Debug/net8.0/grapevineRepository.pdb
+/grapevineServices/bin/Debug/net8.0/grapevineServices.dll
+/grapevineServices/bin/Debug/net8.0/grapevineServices.pdb
+/grapevineServices/obj/Debug/net8.0/grapevineServices.csproj.CoreCompileInputs.cache
+/grapevineServices/obj/Debug/net8.0/grapevineServices.csproj.FileListAbsolute.txt
+/grapevineServices/obj/Debug/net8.0/grapevineServices.dll
+/grapevineServices/obj/Debug/net8.0/grapevineServices.pdb
+/grapevineServices/obj/Debug/net8.0/grapevineServices.sourcelink.json
+/grapevineServices/obj/grapevineServices.csproj.nuget.dgspec.json
+/grapevineServices/obj/project.assets.json
+/grapevineServices/obj/project.nuget.cache
+/grapevineServices/obj/Debug/net8.0/ref/grapevineServices.dll
+/grapevineServices/obj/Debug/net8.0/refint/grapevineServices.dll
+/grapevineCommon/obj/grapevineCommon.csproj.nuget.dgspec.json
+/grapevineCommon/obj/project.assets.json
+/grapevineCommon/obj/project.nuget.cache
+/grapevineData/obj/grapevineData.csproj.nuget.dgspec.json
+/grapevineData/obj/project.assets.json
+/grapevineData/obj/project.nuget.cache
+/grapevineRepository/bin/Debug/net8.0/grapevineRepository.dll
+/grapevineRepository/bin/Debug/net8.0/grapevineRepository.pdb
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.csproj.CoreCompileInputs.cache
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.csproj.FileListAbsolute.txt
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.dll
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.pdb
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.sourcelink.json
+/grapevineRepository/obj/grapevineRepository.csproj.nuget.dgspec.json
+/grapevineRepository/obj/project.assets.json
+/grapevineRepository/obj/project.nuget.cache
+/grapevineRepository/obj/Debug/net8.0/ref/grapevineRepository.dll
+/grapevineRepository/obj/Debug/net8.0/refint/grapevineRepository.dll
