--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,16 @@
 .vs/grapevineApiCode/FileContentIndex/b4390cb6-21fc-49a6-9c16-eaebc8eded89.vsidx
 .vs/grapevineApiCode/v17/.futdcache.v2
 .vs/grapevineApiCode/v17/.suo
+/.vs/grapevineApiCode/FileContentIndex/1ff5259a-4880-4548-af12-21f7a5cffc59.vsidx
+/.vs/grapevineApiCode/FileContentIndex/6d52cb4a-5212-404c-8ab4-77fa27e2cc41.vsidx
+/.vs/grapevineApiCode/FileContentIndex/bf55577d-2a4a-4e52-a21c-5ce979e210af.vsidx
+/grapevineApi/obj/Debug/net8.0/grapevineApi.AssemblyInfo.cs
+/grapevineApi/obj/Debug/net8.0/grapevineApi.AssemblyInfoInputs.cache
+/grapevineApi/obj/Debug/net8.0/grapevineApi.csproj.AssemblyReference.cache
+/grapevineCommon/obj/Debug/net8.0/grapevineCommon.AssemblyInfo.cs
+/grapevineCommon/obj/Debug/net8.0/grapevineCommon.AssemblyInfoInputs.cache
+/grapevineData/obj/Debug/net8.0/grapevineData.AssemblyInfo.cs
+/grapevineData/obj/Debug/net8.0/grapevineData.AssemblyInfoInputs.cache
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.AssemblyInfo.cs
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.AssemblyInfoInputs.cache
+/grapevineRepository/obj/Debug/net8.0/grapevineRepository.csproj.AssemblyReference.cache
