New api changes

--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,6 @@ publish/
 /grapevineApi/obj/Debug/net8.0/grapevineApi.GlobalUsings.g.cs
 /grapevineServices/obj/Debug/net8.0/grapevineServices.GlobalUsings.g.cs
 /grapevineApi/grapevineApi.csproj.user
+/.vs/grapevineApiCode/v17/.futdcache.v2
+/.vs/grapevineApiCode/v17/.futdcache.v2
+/grapevineServices/bin/Debug/net8.0/grapevineServices.deps.json
